1.rectified layout issues associated with viewing in screens less than 468px width. 2.slight change in the design of experience section. 3.minor overall design and layout adjustments. 4.removed subject from contact session. 5.Added a readme file with detailed descriptions about the project.

--- a/style.css
+++ b/style.css
@@ -133,11 +133,11 @@ li a {
   font-weight: 400;
   margin-top: 0;
   margin-right: 30px;
-  margin-bottom: 3px;
+  /* margin-bottom: 3px; */
 }
 
 .card h3 {
-  font-size: 14px;
+  font-size: 17px;
   font-weight: 400;
   margin: 0;
   opacity: 0.75;
@@ -165,7 +165,7 @@ li a {
   padding: 12px;
 }
 
-.socials > a {
+.socials>a {
   position: relative;
   border: 0;
   background: transparent;
@@ -175,7 +175,7 @@ li a {
   margin-right: 1rem;
 }
 
-.socials > button:first-child::before {
+.socials>button:first-child::before {
   content: "";
   position: absolute;
   z-index: 0;
@@ -190,7 +190,7 @@ li a {
   transform: translateY(0);
 }
 
-.socials > button > i {
+.socials>button>i {
   position: relative;
   z-index: 1;
   border: 4px solid var(--card);
@@ -219,6 +219,10 @@ hr {
   text-align: center;
 }
 
+#mobile:active {
+  color: #2078d1;
+}
+
 .row1 {
   display: flex;
   justify-content: space-around;
@@ -229,6 +233,7 @@ hr {
 .row1 div a {
   text-decoration: none;
 }
+
 /* Education Section */
 .education {
   padding: 0 0 50px 0;
@@ -253,7 +258,7 @@ hr {
   box-shadow: 0px 20px 20px -13px rgba(0, 0, 0, 0.3);
 }
 
-.education :is(h2, h4, h3, h5) {
+.eduRow :is(h2, h4, h3, h5) {
   font-weight: 400;
 }
 
@@ -268,7 +273,7 @@ hr {
   padding: 50px 50px;
 }
 
-.main-timeline {
+/* .main-timeline {
   position: relative;
   left: 2.5%;
 }
@@ -281,32 +286,40 @@ hr {
   position: absolute;
   top: 13%;
   left: 45.8%;
-  z-index: -1;
+  z-index: 1;
+} */
+
+.vertical-line {
+  content: "";
+  width: 2px;
+  height: calc(100% - 11.15px);
+  background-color: #000;
+
+  margin: 10px 10px;
+
+
+
 }
 
 .experienceRow {
   display: flex;
 }
 
+.experienceRow :is(h2, h3) {
+  font-weight: 400;
+}
+
 .description {
   max-width: 400px;
 }
 
-.circle {
-  color: #d92cf9;
-  font-size: 13px;
-}
 
 .experienceTitle {
   text-align: end;
 }
 
-.aligned {
-  position: relative;
-  left: 0.4%;
-  top: 15px;
-  margin: 0 50px;
-}
+
+
 .hidden-left {
   transform: translateX(-100%);
   opacity: 0;
@@ -314,7 +327,7 @@ hr {
 }
 
 .hidden-right {
-  transform: translateX(250%);
+  transform: translateX(100%);
   opacity: 0;
   transition: transform 1s ease-out, opacity 1s ease-out;
   overflow: hidden;
@@ -391,9 +404,9 @@ hr {
   padding: 50px;
 }
 
-.certificates img {
+.certificateImg {
   max-width: 400px;
-  height: 300px;
+  height: auto;
 }
 
 /* Skills Section */
@@ -433,7 +446,7 @@ footer {
   margin: 0 1%;
 }
 
-.form > div {
+.form>div {
   padding: 50px 0 0 0;
 }
 
@@ -452,12 +465,11 @@ textarea {
 }
 
 .form input {
-  margin: 0.5% 0;
+  margin: 1% 0;
 }
 
 .formGroup input {
   width: 49%;
-  margin-bottom: 0;
 }
 
 .form div div:nth-child(2) {
@@ -479,7 +491,7 @@ input[type="submit"] {
 }
 
 /* Media Queries */
-@media (width <= 600px) {
+@media (width <=600px) {
   .card {
     margin: 0 40px;
     padding-left: 50px;
@@ -514,12 +526,17 @@ input[type="submit"] {
   }
 
   .container {
-    font-size: 30px;
     justify-content: center;
   }
 }
 
-@media (width <= 480px) {
+@media (width <=480px) {
+  .form{
+    margin: 0 10px;
+  }
+  .certificate{
+    margin: 10px;
+  }
   .card img {
     height: 50vw;
     width: 50vw;
@@ -530,8 +547,15 @@ input[type="submit"] {
   }
 
   .experience-content {
+    display: grid;
+
     font-size: 12px;
     padding: 25px;
+  }
+
+  .main-timeline {
+    display: grid;
+    grid-template-columns: 1fr 0.1fr 1fr;
   }
 
   .aligned {
@@ -544,6 +568,13 @@ input[type="submit"] {
 
   .aligned {
     margin: 20px;
+    top: -18px;
+    left: 7.8%;
+  }
+
+  .experienceRow {
+    display: grid;
+    grid-template-columns: 1fr 0.1fr 1fr;
   }
 }
 
@@ -582,17 +613,17 @@ input[type="submit"] {
     opacity: 1;
   }
 
-  .zeroPadding{
-     position: fixed;
-  top: 0;
-  background-color: white;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0;
-
+  .zeroPadding {
+    position: fixed;
+    top: 0;
+    background-color: white;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
   }
+
   .row {
     display: flex;
     flex-direction: column;
@@ -613,11 +644,14 @@ input[type="submit"] {
     max-width: 350px;
     margin: 0 auto 30px;
   }
+
   .container {
     flex-direction: column;
   }
+
   .navContent {
-    display: none; /* Hide menu by default */
+    display: none;
+    /* Hide menu by default */
     flex-direction: column;
     background-color: white;
     width: 100%;
@@ -626,7 +660,8 @@ input[type="submit"] {
   }
 
   .navContent.show {
-    display: flex; /* Show menu when toggled */
+    display: flex;
+    /* Show menu when toggled */
   }
 
   .navContent li {
@@ -634,11 +669,13 @@ input[type="submit"] {
   }
 
   .icon {
-    display: block; /* Show hamburger icon */
+    display: block;
+    /* Show hamburger icon */
   }
 
   .navContent .icon {
-    display: block; /* Show close icon inside menu */
+    display: block;
+    /* Show close icon inside menu */
   }
 
   .navContent .icon i {
@@ -660,9 +697,11 @@ input[type="submit"] {
   .container ul {
     order: 1;
   }
-  .paddingLeft{
+
+  .paddingLeft {
     padding-left: 20px;
   }
+
   .container ul.show {
     display: flex;
   }
@@ -680,5 +719,9 @@ input[type="submit"] {
 
   .container ul li a:hover {
     background-color: #f1f1f1;
+  }
+
+  .landingPage {
+    margin-top: 50px;
   }
 }
